--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
 Inyang Ukpong   <inyangweb@gmail.com>
-Joseph Bamisaye <jjoebamisaye068@gmail.com>
+Joseph Bamisaye <joebamisaye068@gmail.com>
